--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
     "multer": "^1.4.1",
     "multiparty": "^4.2.1",
     "mv": "^2.1.1",
-    "ngrok": "^3.2.5",
+    "ngrok": "^3.2.2",
     "node-cache": "^4.2.0",
     "node-fetch": "^2.6.1",
     "node-ffprobe": "^1.2.2",
@@ -123,11 +123,11 @@
     "tumblr.js": "^1.1.1",
     "twilio": "^3.31.0",
     "twit": "^2.2.11",
-    "urlsafe-base64": "^1.0.0",
     "validator": "^7.0.0",
     "web-push": "^3.4.4",
     "webhook-discord": "^3.5.1",
     "webp-converter": "^2.3.0",
+    "which": "^2.0.2",
     "winston": "^3.2.1",
     "ws": "^3.3.3",
     "youtube-dl": "github:mayeaux/workingyoutubedl",
