--- a/.env.private.sample
+++ b/.env.private.sample
@@ -2,19 +2,19 @@
 
 # Used in link creation and in the frontend
 # brand name is also tied into the meta tags from the media page
-DOMAIN_NAME_AND_TLD='https://nodetube.live'
-INSTANCE_BRAND_NAME='NodeTube'
-INSTANCE_DOMAIN_NAME='nodetube.live'
+DOMAIN_NAME_AND_TLD='https://srnstreamer.live'
+INSTANCE_BRAND_NAME='SRNSTREAMER'
+INSTANCE_DOMAIN_NAME='srnstreamer.live'
 
-#LIVESTREAM_RTMP_DOMAIN='https://broadcast.nodetube.live'
-#LIVESTREAM_VIEWING_DOMAIN='https://livestream.nodetube.live'
+#LIVESTREAM_RTMP_DOMAIN='https://broadcast.srnstreamer.live'
+#LIVESTREAM_VIEWING_DOMAIN='https://livestream.srnstreamer.live'
 
-INSTANCE_CONTACT_EMAIL='ceo@nodetube.live'
+INSTANCE_CONTACT_EMAIL='ceo@srnstreamer.live'
 
 # Where to run Mongo from. Multiple env vars to cover multiple hosting platforms
-MONGODB_URI='mongodb://localhost:27017/nodetube'
-MONGOLAB_URI='mongodb://localhost:27017/nodetube'
-MONGO_URI='mongodb://localhost:27017/nodetube'
+MONGODB_URI='mongodb://localhost:27017/srnstreamer'
+MONGOLAB_URI='mongodb://localhost:27017/srnstreamer'
+MONGO_URI='mongodb://localhost:27017/srnstreamer'
 
 # endpoint to hit during uploads
 UPLOAD_URL='/upload'
@@ -98,7 +98,7 @@ DISCORD_MODERATION_WEBHOOK_URL=
 # auth token for built ngrok's app.js integration
 NGROK_AUTHTOKEN=
 
-# value like nodetube ( not nodetube.ngrok.io )
+# value like srnstreamer ( not srnstreamer.ngrok.io )
 NGROK_SUBDOMAIN=
 
 # Change this to any secure secret if running in production
