--- a/.env.settings.sample
+++ b/.env.settings.sample
@@ -1,4 +1,4 @@
-# NodeTube Settings. Use this file to turn functionality off and on.
+# SRNSTREAMER Settings. Use this file to turn functionality off and on.
 # Whereas .env.private should be 'set and forget' and are private,
 # .env.settings are less sensitive and changed more often.
 
@@ -59,7 +59,7 @@ CONFIRM_EMAIL_FUNCTIONALITY_ON=false
 
 
 # meta tags for online sharing
-META_DESCRIPTION=NodeTube - An open source file hosting platform built on NodeJS
+META_DESCRIPTION=SRNSTREAMER - An open source file hosting platform built on NodeJS
 META_IMAGE=https://newtube.app/images/full_size_logo.png
 
 # serve from files that are saved locally
