--- a/docs/nginx/nginx.conf
+++ b/docs/nginx/nginx.conf
@@ -20,7 +20,7 @@ server {
         error_page  405     =200 $uri;
 
     # IMPORTANT: set location for the uploads
-	root /home/fred/nodetube;
+	root /home/fred/srnstreamer;
 
         location /uploads/ {
             gzip off;
