--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "NodeTube",
-  "short_name": "NodeTube",
+  "name": "SRNSTREAMER",
+  "short_name": "SRNSTREAMER",
   "theme_color": "#183793",
   "background_color": "#FAFAFA",
   "display": "minimal-ui",
